deployment/deployment-contour/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtest-service-v1
  namespace: webtest-contour
  labels:
    app: webtest
    version: v1
    service: webtest-service-v1
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: webtest
    version: v1
---
